# bp-agi

./: CMakeLists.txt  LICENSE  Makefile  dragonfly_run  parse_benchmark_output.py  requirements.txt  visualize_arc_benchmark.py
examples/: arc_audit.cpp  arc_dragonfly.cpp  arc_honeybee.cpp  arc_verify.cpp  arc_verify.py  conscious_pong.cpp  convert_arc.py  demo_engine.cpp  generate_submission.cpp  grand_finale.cpp  plot_brain_waves.py  plot_learning_curve.py  plot_pong_performance.py  run_real_arc.cpp  spike_recorder.cpp  uks_raster.cpp  verify_submission.py  vision_viz.cpp
include/bpagi/: arc_loader.hpp  brain.hpp  ca3_memory.hpp  config.hpp  cortical_column.hpp  grid_cells.hpp  hippocampus.hpp  motor.hpp  network.hpp  neuron.hpp  pong.hpp  spike_queue.hpp  synapse.hpp  training_protocol.hpp  types.hpp  uks.hpp  vision.hpp  vsa.hpp
src/: brain.cpp  cortical_column.cpp  hippocampus.cpp  main.cpp  motor.cpp  network.cpp  pong.cpp  synapse.cpp  uks.cpp  vision.cpp
